fix photo project on mobile

--- a/source/content/css/partials/_320grid.sass
+++ b/source/content/css/partials/_320grid.sass
@@ -2006,7 +2006,7 @@ hr.spacer-projects
 		img.photo-cover
 			max-width: 100%
 			position: relative
-			margin-top: -90px
+			margin-top: -45px
 			z-index: -1
 
 hr.spacer-localactors
